code_test/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DICT
    ILA_IFX
    KEY
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> external_list
Rule 2     external_list -> external external_list
Rule 3     external_list -> empty
Rule 4     external -> function_def
Rule 5     external -> statement
Rule 6     external -> class_def
Rule 7     function_def -> TYPE ID LPAREN param_list RPAREN compound
Rule 8     param_list -> param_list_nonempty
Rule 9     param_list -> empty
Rule 10    param_list_nonempty -> TYPE ID
Rule 11    param_list_nonempty -> TYPE ID COMMA param_list_nonempty
Rule 12    func_call -> ID LPAREN arg_list RPAREN
Rule 13    arg_list -> arg_list_nonempty
Rule 14    arg_list -> empty
Rule 15    arg_list_nonempty -> expression
Rule 16    arg_list_nonempty -> expression COMMA arg_list_nonempty
Rule 17    compound -> LBRACE stmt_list RBRACE
Rule 18    stmt_list -> statement stmt_list
Rule 19    stmt_list -> empty
Rule 20    statement -> declaration_stmt
Rule 21    statement -> expression_stmt
Rule 22    statement -> if_stmt
Rule 23    statement -> while_stmt
Rule 24    statement -> for_stmt
Rule 25    statement -> return_stmt
Rule 26    statement -> break_stmt
Rule 27    statement -> continue_stmt
Rule 28    statement -> compound
Rule 29    statement -> try_stmt
Rule 30    statement -> throw_stmt
Rule 31    declaration_stmt -> TYPE ID SEMI
Rule 32    declaration_stmt -> TYPE ID ASSIGN expression SEMI
Rule 33    declaration_stmt -> TYPE ID LBRACKET NUMBER RBRACKET SEMI
Rule 34    expression_stmt -> expression SEMI
Rule 35    expression_stmt -> func_call SEMI
Rule 36    expression -> assignment
Rule 37    expression -> binary_expr
Rule 38    assignment -> ID ASSIGN expression
Rule 39    assignment -> ID LBRACKET expression RBRACKET ASSIGN expression
Rule 40    binary_expr -> binary_expr PLUS binary_expr
Rule 41    binary_expr -> binary_expr MINUS binary_expr
Rule 42    binary_expr -> binary_expr TIMES binary_expr
Rule 43    binary_expr -> binary_expr DIVIDE binary_expr
Rule 44    binary_expr -> binary_expr OU binary_expr
Rule 45    binary_expr -> binary_expr AWLA_LOGICAL binary_expr
Rule 46    binary_expr -> binary_expr LT binary_expr
Rule 47    binary_expr -> binary_expr LE binary_expr
Rule 48    binary_expr -> binary_expr GT binary_expr
Rule 49    binary_expr -> binary_expr GE binary_expr
Rule 50    binary_expr -> binary_expr EQ binary_expr
Rule 51    binary_expr -> binary_expr NE binary_expr
Rule 52    binary_expr -> MINUS binary_expr
Rule 53    binary_expr -> MACHI binary_expr
Rule 54    binary_expr -> LPAREN expression RPAREN
Rule 55    binary_expr -> NUMBER
Rule 56    binary_expr -> STRING
Rule 57    binary_expr -> BOOL
Rule 58    binary_expr -> NULL
Rule 59    binary_expr -> ID
Rule 60    binary_expr -> func_call
Rule 61    if_stmt -> ILA LPAREN expression RPAREN statement AWLA statement
Rule 62    if_stmt -> ILA LPAREN expression RPAREN statement
Rule 63    while_stmt -> MNINTCHOUF LPAREN expression RPAREN statement
Rule 64    for_stmt -> KOULLA LPAREN expression SEMI expression SEMI expression RPAREN statement
Rule 65    opt_expr -> expression
Rule 66    opt_expr -> empty
Rule 67    break_stmt -> HRASS SEMI
Rule 68    continue_stmt -> KML SEMI
Rule 69    return_stmt -> RJ3 opt_expr SEMI
Rule 70    binary_expr -> LBRACKET arg_list RBRACKET
Rule 71    binary_expr -> binary_expr LBRACKET expression RBRACKET
Rule 72    binary_expr -> LBRACE dict_items RBRACE
Rule 73    dict_items -> dict_item_list
Rule 74    dict_items -> empty
Rule 75    dict_item_list -> dict_item
Rule 76    dict_item_list -> dict_item COMMA dict_item_list
Rule 77    dict_item -> expression COLON expression
Rule 78    class_def -> CLASS ID class_inheritance LBRACE class_body RBRACE
Rule 79    class_inheritance -> EXTENDS ID
Rule 80    class_inheritance -> empty
Rule 81    class_body -> class_member class_body
Rule 82    class_body -> empty
Rule 83    class_member -> property_decl
Rule 84    class_member -> method_decl
Rule 85    property_decl -> access_modifier TYPE ID SEMI
Rule 86    property_decl -> access_modifier TYPE ID ASSIGN expression SEMI
Rule 87    method_decl -> access_modifier TYPE ID LPAREN param_list RPAREN compound
Rule 88    access_modifier -> PUBLIC
Rule 89    access_modifier -> PRIVATE
Rule 90    access_modifier -> empty
Rule 91    binary_expr -> binary_expr DOT ID
Rule 92    binary_expr -> binary_expr DOT ID LPAREN arg_list RPAREN
Rule 93    try_stmt -> TRY compound catch_clauses
Rule 94    catch_clauses -> catch_clause catch_clauses
Rule 95    catch_clauses -> catch_clause
Rule 96    catch_clause -> CATCH LPAREN EXCEPTION ID RPAREN compound
Rule 97    throw_stmt -> THROW expression SEMI
Rule 98    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 32 38 39 86
AWLA                 : 61
AWLA_LOGICAL         : 45
BOOL                 : 57
CATCH                : 96
CLASS                : 78
COLON                : 77
COMMA                : 11 16 76
DICT                 : 
DIVIDE               : 43
DOT                  : 91 92
EQ                   : 50
EXCEPTION            : 96
EXTENDS              : 79
GE                   : 49
GT                   : 48
HRASS                : 67
ID                   : 7 10 11 12 31 32 33 38 39 59 78 79 85 86 87 91 92 96
ILA                  : 61 62
ILA_IFX              : 
KEY                  : 
KML                  : 68
KOULLA               : 64
LBRACE               : 17 72 78
LBRACKET             : 33 39 70 71
LE                   : 47
LPAREN               : 7 12 54 61 62 63 64 87 92 96
LT                   : 46
MACHI                : 53
MINUS                : 41 52
MNINTCHOUF           : 63
NE                   : 51
NULL                 : 58
NUMBER               : 33 55
OU                   : 44
PLUS                 : 40
PRIVATE              : 89
PUBLIC               : 88
RBRACE               : 17 72 78
RBRACKET             : 33 39 70 71
RJ3                  : 69
RPAREN               : 7 12 54 61 62 63 64 87 92 96
SEMI                 : 31 32 33 34 35 64 64 67 68 69 85 86 97
STRING               : 56
THROW                : 97
TIMES                : 42
TRY                  : 93
TYPE                 : 7 10 11 31 32 33 85 86 87
UMINUS               : 
error                : 

Nonterminals, with rules where they appear

access_modifier      : 85 86 87
arg_list             : 12 70 92
arg_list_nonempty    : 13 16
assignment           : 36
binary_expr          : 37 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 71 91 92
break_stmt           : 26
catch_clause         : 94 95
catch_clauses        : 93 94
class_body           : 78 81
class_def            : 6
class_inheritance    : 78
class_member         : 81
compound             : 7 28 87 93 96
continue_stmt        : 27
declaration_stmt     : 20
dict_item            : 75 76
dict_item_list       : 73 76
dict_items           : 72
empty                : 3 9 14 19 66 74 80 82 90
expression           : 15 16 32 34 38 39 39 54 61 62 63 64 64 64 65 71 77 77 86 97
expression_stmt      : 21
external             : 2
external_list        : 1 2
for_stmt             : 24
func_call            : 35 60
function_def         : 4
if_stmt              : 22
method_decl          : 84
opt_expr             : 69
param_list           : 7 87
param_list_nonempty  : 8 11
program              : 0
property_decl        : 83
return_stmt          : 25
statement            : 5 18 61 61 62 63 64
stmt_list            : 17 18
throw_stmt           : 30
try_stmt             : 29
while_stmt           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_list
    (2) external_list -> . external external_list
    (3) external_list -> . empty
    (4) external -> . function_def
    (5) external -> . statement
    (6) external -> . class_def
    (98) empty -> .
    (7) function_def -> . TYPE ID LPAREN param_list RPAREN compound
    (20) statement -> . declaration_stmt
    (21) statement -> . expression_stmt
    (22) statement -> . if_stmt
    (23) statement -> . while_stmt
    (24) statement -> . for_stmt
    (25) statement -> . return_stmt
    (26) statement -> . break_stmt
    (27) statement -> . continue_stmt
    (28) statement -> . compound
    (29) statement -> . try_stmt
    (30) statement -> . throw_stmt
    (78) class_def -> . CLASS ID class_inheritance LBRACE class_body RBRACE
    (31) declaration_stmt -> . TYPE ID SEMI
    (32) declaration_stmt -> . TYPE ID ASSIGN expression SEMI
    (33) declaration_stmt -> . TYPE ID LBRACKET NUMBER RBRACKET SEMI
    (34) expression_stmt -> . expression SEMI
    (35) expression_stmt -> . func_call SEMI
    (61) if_stmt -> . ILA LPAREN expression RPAREN statement AWLA statement
    (62) if_stmt -> . ILA LPAREN expression RPAREN statement
    (63) while_stmt -> . MNINTCHOUF LPAREN expression RPAREN statement
    (64) for_stmt -> . KOULLA LPAREN expression SEMI expression SEMI expression RPAREN statement
    (69) return_stmt -> . RJ3 opt_expr SEMI
    (67) break_stmt -> . HRASS SEMI
    (68) continue_stmt -> . KML SEMI
    (17) compound -> . LBRACE stmt_list RBRACE
    (93) try_stmt -> . TRY compound catch_clauses
    (97) throw_stmt -> . THROW expression SEMI
    (36) expression -> . assignment
    (37) expression -> . binary_expr
    (12) func_call -> . ID LPAREN arg_list RPAREN
    (38) assignment -> . ID ASSIGN expression
    (39) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (40) binary_expr -> . binary_expr PLUS binary_expr
    (41) binary_expr -> . binary_expr MINUS binary_expr
    (42) binary_expr -> . binary_expr TIMES binary_expr
    (43) binary_expr -> . binary_expr DIVIDE binary_expr
    (44) binary_expr -> . binary_expr OU binary_expr
    (45) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (46) binary_expr -> . binary_expr LT binary_expr
    (47) binary_expr -> . binary_expr LE binary_expr
    (48) binary_expr -> . binary_expr GT binary_expr
    (49) binary_expr -> . binary_expr GE binary_expr
    (50) binary_expr -> . binary_expr EQ binary_expr
    (51) binary_expr -> . binary_expr NE binary_expr
    (52) binary_expr -> . MINUS binary_expr
    (53) binary_expr -> . MACHI binary_expr
    (54) binary_expr -> . LPAREN expression RPAREN
    (55) binary_expr -> . NUMBER
    (56) binary_expr -> . STRING
    (57) binary_expr -> . BOOL
    (58) binary_expr -> . NULL
    (59) binary_expr -> . ID
    (60) binary_expr -> . func_call
    (70) binary_expr -> . LBRACKET arg_list RBRACKET
    (71) binary_expr -> . binary_expr LBRACKET expression RBRACKET
    (72) binary_expr -> . LBRACE dict_items RBRACE
    (91) binary_expr -> . binary_expr DOT ID
    (92) binary_expr -> . binary_expr DOT ID LPAREN arg_list RPAREN

    $end            reduce using rule 98 (empty -> .)
    TYPE            shift and go to state 8
    CLASS           shift and go to state 22
    ILA             shift and go to state 28
    MNINTCHOUF      shift and go to state 29
    KOULLA          shift and go to state 30
    RJ3             shift and go to state 31
    HRASS           shift and go to state 32
    KML             shift and go to state 33
    LBRACE          shift and go to state 23
    TRY             shift and go to state 34
    THROW           shift and go to state 35
    ID              shift and go to state 9
    MINUS           shift and go to state 38
    MACHI           shift and go to state 39
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 26
    STRING          shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    LBRACKET        shift and go to state 25

    program                        shift and go to state 1
    external_list                  shift and go to state 2
    external                       shift and go to state 3
    empty                          shift and go to state 4
    function_def                   shift and go to state 5
    statement                      shift and go to state 6
    class_def                      shift and go to state 7
    compound                       shift and go to state 11
    declaration_stmt               shift and go to state 12
    expression_stmt                shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    return_stmt                    shift and go to state 17
    break_stmt                     shift and go to state 18
    continue_stmt                  shift and go to state 19
    try_stmt                       shift and go to state 20
    throw_stmt                     shift and go to state 21
    expression                     shift and go to state 24
    func_call                      shift and go to state 27
    assignment                     shift and go to state 36
    binary_expr                    shift and go to state 37

state 1

    (0) S' -> program .



state 2

    (1) program -> external_list .

    $end            reduce using rule 1 (program -> external_list .)


state 3

    (2) external_list -> external . external_list
    (2) external_list -> . external external_list
    (3) external_list -> . empty
    (4) external -> . function_def
    (5) external -> . statement
    (6) external -> . class_def
    (98) empty -> .
    (7) function_def -> . TYPE ID LPAREN param_list RPAREN compound
    (20) statement -> . declaration_stmt
    (21) statement -> . expression_stmt
    (22) statement -> . if_stmt
    (23) statement -> . while_stmt
    (24) statement -> . for_stmt
    (25) statement -> . return_stmt
    (26) statement -> . break_stmt
    (27) statement -> . continue_stmt
    (28) statement -> . compound
    (29) statement -> . try_stmt
    (30) statement -> . throw_stmt
    (78) class_def -> . CLASS ID class_inheritance LBRACE class_body RBRACE
    (31) declaration_stmt -> . TYPE ID SEMI
    (32) declaration_stmt -> . TYPE ID ASSIGN expression SEMI
    (33) declaration_stmt -> . TYPE ID LBRACKET NUMBER RBRACKET SEMI
    (34) expression_stmt -> . expression SEMI
    (35) expression_stmt -> . func_call SEMI
    (61) if_stmt -> . ILA LPAREN expression RPAREN statement AWLA statement
    (62) if_stmt -> . ILA LPAREN expression RPAREN statement
    (63) while_stmt -> . MNINTCHOUF LPAREN expression RPAREN statement
    (64) for_stmt -> . KOULLA LPAREN expression SEMI expression SEMI expression RPAREN statement
    (69) return_stmt -> . RJ3 opt_expr SEMI
    (67) break_stmt -> . HRASS SEMI
    (68) continue_stmt -> . KML SEMI
    (17) compound -> . LBRACE stmt_list RBRACE
    (93) try_stmt -> . TRY compound catch_clauses
    (97) throw_stmt -> . THROW expression SEMI
    (36) expression -> . assignment
    (37) expression -> . binary_expr
    (12) func_call -> . ID LPAREN arg_list RPAREN
    (38) assignment -> . ID ASSIGN expression
    (39) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (40) binary_expr -> . binary_expr PLUS binary_expr
    (41) binary_expr -> . binary_expr MINUS binary_expr
    (42) binary_expr -> . binary_expr TIMES binary_expr
    (43) binary_expr -> . binary_expr DIVIDE binary_expr
    (44) binary_expr -> . binary_expr OU binary_expr
    (45) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (46) binary_expr -> . binary_expr LT binary_expr
    (47) binary_expr -> . binary_expr LE binary_expr
    (48) binary_expr -> . binary_expr GT binary_expr
    (49) binary_expr -> . binary_expr GE binary_expr
    (50) binary_expr -> . binary_expr EQ binary_expr
    (51) binary_expr -> . binary_expr NE binary_expr
    (52) binary_expr -> . MINUS binary_expr
    (53) binary_expr -> . MACHI binary_expr
    (54) binary_expr -> . LPAREN expression RPAREN
    (55) binary_expr -> . NUMBER
    (56) binary_expr -> . STRING
    (57) binary_expr -> . BOOL
    (58) binary_expr -> . NULL
    (59) binary_expr -> . ID
    (60) binary_expr -> . func_call
    (70) binary_expr -> . LBRACKET arg_list RBRACKET
    (71) binary_expr -> . binary_expr LBRACKET expression RBRACKET
    (72) binary_expr -> . LBRACE dict_items RBRACE
    (91) binary_expr -> . binary_expr DOT ID
    (92) binary_expr -> . binary_expr DOT ID LPAREN arg_list RPAREN

    $end            reduce using rule 98 (empty -> .)
    TYPE            shift and go to state 8
    CLASS           shift and go to state 22
    ILA             shift and go to state 28
    MNINTCHOUF      shift and go to state 29
    KOULLA          shift and go to state 30
    RJ3             shift and go to state 31
    HRASS           shift and go to state 32
    KML             shift and go to state 33
    LBRACE          shift and go to state 23
    TRY             shift and go to state 34
    THROW           shift and go to state 35
    ID              shift and go to state 9
    MINUS           shift and go to state 38
    MACHI           shift and go to state 39
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 26
    STRING          shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    LBRACKET        shift and go to state 25

    external                       shift and go to state 3
    external_list                  shift and go to state 43
    empty                          shift and go to state 4
    function_def                   shift and go to state 5
    statement                      shift and go to state 6
    class_def                      shift and go to state 7
    compound                       shift and go to state 11
    declaration_stmt               shift and go to state 12
    expression_stmt                shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    return_stmt                    shift and go to state 17
    break_stmt                     shift and go to state 18
    continue_stmt                  shift and go to state 19
    try_stmt                       shift and go to state 20
    throw_stmt                     shift and go to state 21
    expression                     shift and go to state 24
    func_call                      shift and go to state 27
    assignment                     shift and go to state 36
    binary_expr                    shift and go to state 37

state 4

    (3) external_list -> empty .

    $end            reduce using rule 3 (external_list -> empty .)


state 5

    (4) external -> function_def .

    TYPE            reduce using rule 4 (external -> function_def .)
    CLASS           reduce using rule 4 (external -> function_def .)
    ILA             reduce using rule 4 (external -> function_def .)
    MNINTCHOUF      reduce using rule 4 (external -> function_def .)
    KOULLA          reduce using rule 4 (external -> function_def .)
    RJ3             reduce using rule 4 (external -> function_def .)
    HRASS           reduce using rule 4 (external -> function_def .)
    KML             reduce using rule 4 (external -> function_def .)
    LBRACE          reduce using rule 4 (external -> function_def .)
    TRY             reduce using rule 4 (external -> function_def .)
    THROW           reduce using rule 4 (external -> function_def .)
    ID              reduce using rule 4 (external -> function_def .)
    MINUS           reduce using rule 4 (external -> function_def .)
    MACHI           reduce using rule 4 (external -> function_def .)
    LPAREN          reduce using rule 4 (external -> function_def .)
    NUMBER          reduce using rule 4 (external -> function_def .)
    STRING          reduce using rule 4 (external -> function_def .)
    BOOL            reduce using rule 4 (external -> function_def .)
    NULL            reduce using rule 4 (external -> function_def .)
    LBRACKET        reduce using rule 4 (external -> function_def .)
    $end            reduce using rule 4 (external -> function_def .)


state 6

    (5) external -> statement .

    TYPE            reduce using rule 5 (external -> statement .)
    CLASS           reduce using rule 5 (external -> statement .)
    ILA             reduce using rule 5 (external -> statement .)
    MNINTCHOUF      reduce using rule 5 (external -> statement .)
    KOULLA          reduce using rule 5 (external -> statement .)
    RJ3             reduce using rule 5 (external -> statement .)
    HRASS           reduce using rule 5 (external -> statement .)
    KML             reduce using rule 5 (external -> statement .)
    LBRACE          reduce using rule 5 (external -> statement .)
    TRY             reduce using rule 5 (external -> statement .)
    THROW           reduce using rule 5 (external -> statement .)
    ID              reduce using rule 5 (external -> statement .)
    MINUS           reduce using rule 5 (external -> statement .)
    MACHI           reduce using rule 5 (external -> statement .)
    LPAREN          reduce using rule 5 (external -> statement .)
    NUMBER          reduce using rule 5 (external -> statement .)
    STRING          reduce using rule 5 (external -> statement .)
    BOOL            reduce using rule 5 (external -> statement .)
    NULL            reduce using rule 5 (external -> statement .)
    LBRACKET        reduce using rule 5 (external -> statement .)
    $end            reduce using rule 5 (external -> statement .)


state 7

    (6) external -> class_def .

    TYPE            reduce using rule 6 (external -> class_def .)
    CLASS           reduce using rule 6 (external -> class_def .)
    ILA             reduce using rule 6 (external -> class_def .)
    MNINTCHOUF      reduce using rule 6 (external -> class_def .)
    KOULLA          reduce using rule 6 (external -> class_def .)
    RJ3             reduce using rule 6 (external -> class_def .)
    HRASS           reduce using rule 6 (external -> class_def .)
    KML             reduce using rule 6 (external -> class_def .)
    LBRACE          reduce using rule 6 (external -> class_def .)
    TRY             reduce using rule 6 (external -> class_def .)
    THROW           reduce using rule 6 (external -> class_def .)
    ID              reduce using rule 6 (external -> class_def .)
    MINUS           reduce using rule 6 (external -> class_def .)
    MACHI           reduce using rule 6 (external -> class_def .)
    LPAREN          reduce using rule 6 (external -> class_def .)
    NUMBER          reduce using rule 6 (external -> class_def .)
    STRING          reduce using rule 6 (external -> class_def .)
    BOOL            reduce using rule 6 (external -> class_def .)
    NULL            reduce using rule 6 (external -> class_def .)
    LBRACKET        reduce using rule 6 (external -> class_def .)
    $end            reduce using rule 6 (external -> class_def .)


state 8

    (7) function_def -> TYPE . ID LPAREN param_list RPAREN compound
    (31) declaration_stmt -> TYPE . ID SEMI
    (32) declaration_stmt -> TYPE . ID ASSIGN expression SEMI
    (33) declaration_stmt -> TYPE . ID LBRACKET NUMBER RBRACKET SEMI

    ID              shift and go to state 44


state 9

    (12) func_call -> ID . LPAREN arg_list RPAREN
    (38) assignment -> ID . ASSIGN expression
    (39) assignment -> ID . LBRACKET expression RBRACKET ASSIGN expression
    (59) binary_expr -> ID .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LPAREN          shift and go to state 45
    ASSIGN          shift and go to state 46
    LBRACKET        shift and go to state 47
    PLUS            reduce using rule 59 (binary_expr -> ID .)
    MINUS           reduce using rule 59 (binary_expr -> ID .)
    TIMES           reduce using rule 59 (binary_expr -> ID .)
    DIVIDE          reduce using rule 59 (binary_expr -> ID .)
    OU              reduce using rule 59 (binary_expr -> ID .)
    AWLA_LOGICAL    reduce using rule 59 (binary_expr -> ID .)
    LT              reduce using rule 59 (binary_expr -> ID .)
    LE              reduce using rule 59 (binary_expr -> ID .)
    GT              reduce using rule 59 (binary_expr -> ID .)
    GE              reduce using rule 59 (binary_expr -> ID .)
    EQ              reduce using rule 59 (binary_expr -> ID .)
    NE              reduce using rule 59 (binary_expr -> ID .)
    DOT             reduce using rule 59 (binary_expr -> ID .)
    SEMI            reduce using rule 59 (binary_expr -> ID .)
    COLON           reduce using rule 59 (binary_expr -> ID .)

  ! LBRACKET        [ reduce using rule 59 (binary_expr -> ID .) ]


state 10

    (54) binary_expr -> LPAREN . expression RPAREN
    (36) expression -> . assignment
    (37) expression -> . binary_expr
    (38) assignment -> . ID ASSIGN expression
    (39) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (40) binary_expr -> . binary_expr PLUS binary_expr
    (41) binary_expr -> . binary_expr MINUS binary_expr
    (42) binary_expr -> . binary_expr TIMES binary_expr
    (43) binary_expr -> . binary_expr DIVIDE binary_expr
    (44) binary_expr -> . binary_expr OU binary_expr
    (45) binary_expr -> . binary_expr AWLA_LOGICAL binary_expr
    (46) binary_expr -> . binary_expr LT binary_expr
    (47) binary_expr -> . binary_expr LE binary_expr
    (48) binary_expr -> . binary_expr GT binary_expr
    (49) binary_expr -> . binary_expr GE binary_expr
    (50) binary_expr -> . binary_expr EQ binary_expr
    (51) binary_expr -> . binary_expr NE binary_expr
    (52) binary_expr -> . MINUS binary_expr
    (53) binary_expr -> . MACHI binary_expr
    (54) binary_expr -> . LPAREN expression RPAREN
    (55) binary_expr -> . NUMBER
    (56) binary_expr -> . STRING
    (57) binary_expr -> . BOOL
    (58) binary_expr -> . NULL
    (59) binary_expr -> . ID
    (60) binary_expr -> . func_call
    (70) binary_expr -> . LBRACKET arg_list RBRACKET
    (71) binary_expr -> . binary_expr LBRACKET expression RBRACKET
    (72) binary_expr -> . LBRACE dict_items RBRACE
    (91) binary_expr -> . binary_expr DOT ID
    (92) binary_expr -> . binary_expr DOT ID LPAREN arg_list RPAREN
    (12) func_call -> . ID LPAREN arg_list RPAREN

    ID              shift and go to state 49
    MINUS           shift and go to state 38
    MACHI           shift and go to state 39
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 26
    STRING          shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    LBRACKET        shift and go to state 25
    LBRACE          shift and go to state 51

    expression                     shift and go to state 48
    assignment                     shift and go to state 36
    binary_expr                    shift and go to state 37
    func_call                      shift and go to state 50

state 11

    (28) statement -> compound .

    TYPE            reduce using rule 28 (statement -> compound .)
    CLASS           reduce using rule 28 (statement -> compound .)
    ILA             reduce using rule 28 (statement -> compound .)
    MNINTCHOUF      reduce using rule 28 (statement -> compound .)
    KOULLA          reduce using rule 28 (statement -> compound .)
    RJ3             reduce using rule 28 (statement -> compound .)
    HRASS           reduce using rule 28 (statement -> compound .)
    KML             reduce using rule 28 (statement -> compound .)
    LBRACE          reduce using rule 28 (statement -> compound .)
    TRY             reduce using rule 28 (statement -> compound .)
    THROW           reduce using rule 28 (statement -> compound .)
    ID              reduce using rule 28 (statement -> compound .)
    MINUS           reduce using rule 28 (statement -> compound .)
    MACHI           reduce using rule 28 (statement -> compound .)
    LPAREN          reduce using rule 28 (statement -> compound .)
    NUMBER          reduce using rule 28 (statement -> compound .)
    STRING          reduce using rule 28 (statement -> compound .)
    BOOL            reduce using rule 28 (statement -> compound .)
    NULL            reduce using rule 28 (statement -> compound .)
    LBRACKET        reduce using rule 28 (statement -> compound .)
    $end            reduce using rule 28 (statement -> compound .)
    RBRACE          reduce using rule 28 (statement -> compound .)
    AWLA            reduce using rule 28 (statement -> compound .)


state 12

    (20) statement -> declaration_stmt .

    TYPE            reduce using rule 20 (statement -> declaration_stmt .)
    CLASS           reduce using rule 20 (statement -> declaration_stmt .)
    ILA             reduce using rule 20 (statement -> declaration_stmt .)
    MNINTCHOUF      reduce using rule 20 (statement -> declaration_stmt .)
    KOULLA          reduce using rule 20 (statement -> declaration_stmt .)
    RJ3             reduce using rule 20 (statement -> declaration_stmt .)
    HRASS           reduce using rule 20 (statement -> declaration_stmt .)
    KML             reduce using rule 20 (statement -> declaration_stmt .)
    LBRACE          reduce using rule 20 (statement -> declaration_stmt .)
    TRY             reduce using rule 20 (statement -> declaration_stmt .)
    THROW           reduce using rule 20 (statement -> declaration_stmt .)
    ID              reduce using rule 20 (statement -> declaration_stmt .)
    MINUS           reduce using rule 20 (statement -> declaration_stmt .)
    MACHI           reduce using rule 20 (statement -> declaration_stmt .)
    LPAREN          reduce using rule 20 (statement -> declaration_stmt .)
    NUMBER          reduce using rule 20 (statement -> declaration_stmt .)
    STRING          reduce using rule 20 (statement -> declaration_stmt .)
    BOOL            reduce using rule 20 (statement -> declaration_stmt .)
    NULL            reduce using rule 20 (statement -> declaration_stmt .)
    LBRACKET        reduce using rule 20 (statement -> declaration_stmt .)
    $end            reduce using rule 20 (statement -> declaration_stmt .)
    RBRACE          reduce using rule 20 (statement -> declaration_stmt .)
    AWLA            reduce using rule 20 (statement -> declaration_stmt .)


state 13

    (21) statement -> expression_stmt .

    TYPE            reduce using rule 21 (statement -> expression_stmt .)
    CLASS           reduce using rule 21 (statement -> expression_stmt .)
    ILA             reduce using rule 21 (statement -> expression_stmt .)
    MNINTCHOUF      reduce using rule 21 (statement -> expression_stmt .)
    KOULLA          reduce using rule 21 (statement -> expression_stmt .)
    RJ3             reduce using rule 21 (statement -> expression_stmt .)
    HRASS           reduce using rule 21 (statement -> expression_stmt .)
    KML             reduce using rule 21 (statement -> expression_stmt .)
    LBRACE          reduce using rule 21 (statement -> expression_stmt .)
    TRY             reduce using rule 21 (statement -> expression_stmt .)
    THROW           reduce using rule 21 (statement -> expression_stmt .)
    ID              reduce using rule 21 (statement -> expression_stmt .)
    MINUS           reduce using rule 21 (statement -> expression_stmt .)
    MACHI           reduce using rule 21 (statement -> expression_stmt .)
    LPAREN          reduce using rule 21 (statement -> expression_stmt .)
    NUMBER          reduce using rule 21 (statement -> expression_stmt .)
    STRING          reduce using rule 21 (statement -> expression_stmt .)
    BOOL            reduce using rule 21 (statement -> expression_stmt .)
    NULL            reduce using rule 21 (statement -> expression_stmt .)
    LBRACKET        reduce using rule 21 (statement -> expression_stmt .)
    $end            reduce using rule 21 (statement -> expression_stmt .)
    RBRACE          reduce using rule 21 (statement -> expression_stmt .)
    AWLA            reduce using rule 21 (statement -> expression_stmt .)


state 14

    (22) statement -> if_stmt .

    TYPE            reduce using rule 22 (statement -> if_stmt .)
    CLASS           reduce using rule 22 (statement -> if_stmt .)
    ILA             reduce using rule 22 (statement -> if_stmt .)
    MNINTCHOUF      reduce using rule 22 (statement -> if_stmt .)
    KOULLA          reduce using rule 22 (statement -> if_stmt .)
    RJ3             reduce using rule 22 (statement -> if_stmt .)
    HRASS           reduce using rule 22 (statement -> if_stmt .)
    KML             reduce using rule 22 (statement -> if_stmt .)
    LBRACE          reduce using rule 22 (statement -> if_stmt .)
    TRY             reduce using rule 22 (statement -> if_stmt .)
    THROW           reduce using rule 22 (statement -> if_stmt .)
    ID              reduce using rule 22 (statement -> if_stmt .)
    MINUS           reduce using rule 22 (statement -> if_stmt .)
    MACHI           reduce using rule 22 (statement -> if_stmt .)
    LPAREN          reduce using rule 22 (statement -> if_stmt .)
    NUMBER          reduce using rule 22 (statement -> if_stmt .)
    STRING          reduce using rule 22 (statement -> if_stmt .)
    BOOL            reduce using rule 22 (statement -> if_stmt .)
    NULL            reduce using rule 22 (statement -> if_stmt .)
    LBRACKET        reduce using rule 22 (statement -> if_stmt .)
    $end            reduce using rule 22 (statement -> if_stmt .)
    RBRACE          reduce using rule 22 (statement -> if_stmt .)
    AWLA            reduce using rule 22 (statement -> if_stmt .)


state 15

    (23) statement -> while_stmt .

    TYPE            reduce using rule 23 (statement -> while_stmt .)
    CLASS           reduce using rule 23 (statement -> while_stmt .)
    ILA             reduce using rule 23 (statement -> while_stmt .)
    MNINTCHOUF      reduce using rule 23 (statement -> while_stmt .)
    KOULLA          reduce using rule 23 (statement -> while_stmt .)
    RJ3             reduce using rule 23 (statement -> while_stmt .)
    HRASS           reduce using rule 23 (statement -> while_stmt .)
    KML             reduce using rule 23 (statement -> while_stmt .)
    LBRACE          reduce using rule 23 (statement -> while_stmt .)
    TRY             reduce using rule 23 (statement -> while_stmt .)
    THROW           reduce using rule 23 (statement -> while_stmt .)
    ID              reduce using rule 23 (statement -> while_stmt .)
    MINUS           reduce using rule 23 (statement -> while_stmt .)
    MACHI           reduce using rule 23 (statement -> while_stmt .)
    LPAREN          reduce using rule 23 (statement -> while_stmt .)
    NUMBER          reduce using rule 23 (statement -> while_stmt .)
    STRING          reduce using rule 23 (statement -> while_stmt .)
    BOOL            reduce using rule 23 (statement -> while_stmt .)
    NULL            reduce using rule 23 (statement -> while_stmt .)
    LBRACKET        reduce using rule 23 (statement -> while_stmt .)
    $end            reduce using rule 23 (statement -> while_stmt .)
    RBRACE          reduce using rule 23 (statement -> while_stmt .)
    AWLA            reduce using rule 23 (statement -> while_stmt .)


state 16

    (24) statement -> for_stmt .
